src/objects/Pallet__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pallet_Type__c</fullName>
        <label>Pallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disposal - 0.8x1.2m</fullName>
                </value>
                <value>
                    <fullName>Disposal - 1x1.2m</fullName>
                </value>
                <value>
                    <fullName>Disposal - 1.1x1.1m</fullName>
                </value>
                <value>
                    <fullName>CHEP - 0.8x1.2m</fullName>
                </value>
                <value>
                    <fullName>CHEP - 40x48 inches</fullName>
                </value>
                <value>
                    <fullName>PECO - 0.8x1.2m</fullName>
                </value>
                <value>
                    <fullName>PECO - 40x48 inches</fullName>
                </value>
                <value>
                    <fullName>LOSCAM - 0.8x1.2m</fullName>
                </value>
                <value>
                    <fullName>LOSCAM - 40x48 inches</fullName>
                </value>
                <value>
                    <fullName>Slip sheet - 0.8x1.2m</fullName>
                </value>
                <value>
                    <fullName>Slip sheet - 1x1.2m</fullName>
                </value>
                <value>
                    <fullName>Slip sheet - 1.1x1.1m</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>Pallet</relationshipLabel>
        <relationshipName>Pallet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>USD_each__c</fullName>
        <label>USD/each</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pallet</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Pallet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pallet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>